ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: demo-app-ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: demo.locu.io
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: demo-app-service
            port:
              number: 3000
---
